--- a/analyse2/analyse.Rmd
+++ b/analyse2/analyse.Rmd
@@ -46,46 +46,32 @@ DTPlaces <- data.table();
 DTProcessInt <- data.table();
 DTForm <- data.table();
 
-if(logDataLoad)
-  print("Chargement des donnees: ");
-
 #On parse tous les dirs a la racine
 for(d in dirs){
-  if(logDataLoad)
-    print(d);
   #si on est sur un rep de datas, c'est un nouveau joueur
   if(grepl("data",d)){
-    if(logDataLoad)
-      print("data");
     player_id <- player_id + 1;
     is_result = TRUE;
     
     #si c'est un rep de data mod ou vanilla, on a les bonnes vars, on load
     if(is_result){
-      if(logDataLoad)
-        print("Grabbing files...");
       
       #on recup le game mode
-      if(logDataLoad) print("game_type.del");
       DTModeLoc <- as.data.table(read.csv(paste(d,"/game_type.del",sep="" ),header=FALSE,sep=";"))
       setnames(DTModeLoc, old=c("V1","V2"), new=c("mode", "time"));
       DTModeLoc[, modeName:="vanilla"][mode==0, modeName:="mod"];
       
-      if(logDataLoad) print("actor_interaction_kind.del");
       DTAIntKindLoc <- as.data.table(read.csv(paste(d,"/actor_interaction_kind.del",sep="" ),header=FALSE,sep=";"))
       setnames(DTAIntKindLoc, old=c("V1","V2"), new=c("action", "actionName"));
       
-      if(logDataLoad) print("item_interaction_kind.del");
       DTItemIntKindLoc <- as.data.table(read.csv(paste(d,"/item_interaction_kind.del",sep="" ),header=FALSE,sep=";"))
       setnames(DTItemIntKindLoc, old=c("V1","V2"), new=c("action", "actionName"));
       
-      if(logDataLoad) print("actor.del");
       DTALoc <- as.data.table(read.csv(paste(d,"/actor.del",sep="" ),header=FALSE,sep=";"))
       DTALoc$MyPlayerId <- player_id
       setnames(DTALoc, old=c("V1","V2","V3","V4","V5","V6"), new=c("id", "name","kind","X","Y","Z"))
       DTA <- rbind(DTA,DTALoc);
       
-      if(logDataLoad) print("actor_actor_interaction.del");
       DTAAIntLoc <- as.data.table(read.csv(paste(d,"/actor_actor_interaction.del",sep="" ),header=FALSE,sep=";"))
       setnames(DTAAIntLoc, old=c("V1","V2","V3","V4","V5","V6","V7","V8"), new=c("actor1", "actor2","V3","X","Y","Z","time","action"))
       DTAAIntLoc$MyPlayerId <- player_id
@@ -100,7 +86,6 @@ for(d in dirs){
       DTAAIntPlayer <- rbind(DTAAIntPlayer,DTAAIntLoc[actor1==DTALoc[kind==0]$id] );
       DTAAIntPlayer <- rbind(DTAAIntPlayer,DTAAIntLoc[actor2==DTALoc[kind==0]$id] );
       
-      if(logDataLoad) print("actor_interaction.del");
       DTAIntLoc <- as.data.table(read.csv(paste(d,"/actor_interaction.del",sep="" ),header=FALSE,sep=";"))
       setnames(DTAIntLoc, old=c("V1","V2","V3","V4","V5","V6","V7"), new=c("actor","X","Y","Z","time","action","V7"))
       DTAIntLoc$MyPlayerId <- player_id
@@ -115,7 +100,6 @@ for(d in dirs){
       
       DTAInt <- rbind(DTAInt,DTAIntLoc);
       
-      if(logDataLoad) print("actor_item_interaction.del");
       DTAItemIntLoc <- as.data.table(read.csv(paste(d,"/actor_item_interaction.del",sep="" ),header=FALSE,sep=";"))
       setnames(DTAItemIntLoc, old=c("V1","V2","V3","V4","V5","V6","V7"), new=c("actor","item","X","Y","Z","time","action"))
       DTAItemIntLoc$MyPlayerId <- player_id
@@ -128,22 +112,19 @@ for(d in dirs){
       
       DTAItemInt <- rbind(DTAItemInt,DTAItemIntLoc);
       
-      if(logDataLoad) print("actor_position.del");
       DTAPosLoc <- as.data.table(read.csv(paste(d,"/actor_position.del",sep="" ),header=FALSE,sep=";"))
       setnames(DTAPosLoc, old=c("V1","V2","V3","V4","V5"), new=c("actor","time","X","Y","Z"))
       DTAPosLoc$MyPlayerId <- player_id
       DTAPosLoc[, MyMod:=DTModeLoc[1]$modeName][time>=DTModeLoc[2]$time, MyMod:=DTModeLoc[2]$modeName]
       DTAPos <- rbind(DTAPos,DTAPosLoc);
       
-      if(logDataLoad) print("place.del");
       DTPlacesLoc <- as.data.table(read.csv(paste(d,"/place.del",sep="" ),header=FALSE,sep=";"))
       setnames(DTPlacesLoc, old=c("V1","V2","V3","V4"), new=c("id","X","Y","Z"))
       DTPlacesLoc$MyPlayerId <- player_id
       DTPlaces <- rbind(DTPlaces,DTPlacesLoc);
       if(logDataLoad)
-        print(paste("add ",nrow(DTPlacesLoc)," places"));
+        paste("add ",nrow(DTPlacesLoc)," places")
       
-      if(logDataLoad) print("process_interaction.del");
       processInt <- paste(d,"/process_interaction.del",sep="" )
       if (file.size(processInt) > 0) {
         DTProcessIntLoc <- as.data.table(read.csv(paste(d,"/process_interaction.del",sep="" ),header=FALSE,sep=";"))
@@ -159,13 +140,23 @@ for(d in dirs){
         DTFormLoc <- as.data.table(read.csv(paste(d,"/",form_file,sep="" ),header=TRUE,sep=";"))
         DTFormLoc$MyPlayerId <- player_id;
         DTFormLoc$FirstCondition <- DTModeLoc[1]$modeName;
+        DTFormLoc$LongueurPremiere <- nchar(as.character(DTFormLoc$premiere))
+        DTFormLoc$LongueurSeconde <- nchar(as.character(DTFormLoc$seconde))
         DTForm <- rbind(DTForm,DTFormLoc);
       }else{
         print(paste(">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  ERROR : FORMULAIRE MANQUANT !!!! in ",d));
       }
       
-      if(logDataLoad)
-        print("... done");
+      #on recup le nombre de process utilisé
+      setkey(DTForm,MyPlayerId)
+      setkey(DTProcessInt,MyPlayerId)
+      DTFormProcess <- DTForm[DTProcessInt, nomatch=0]
+      DTFormProcessIntNbTmp <- DTFormProcess[,nrow(.SD),by=MyPlayerId]
+      setkey(DTForm,MyPlayerId)
+      setkey(DTFormProcessIntNbTmp,MyPlayerId)
+      DTFormProcessInt <- DTForm[DTFormProcessIntNbTmp, nomatch=0]
+      setnames(DTFormProcessInt, old=c("V1"), new=c("nb"))
+      remove(DTFormProcessIntNbTmp);
       
       remove(DTPlacesLoc);
       remove(DTALoc);
@@ -198,23 +189,44 @@ Expérience réalisée sur **`r nbPlayers`** joueurs, pour un playtime moyen de **`
 
 ```{r echo=FALSE}
 hist(playtime$playTime, xlab="Playtime (mins)", ylab="nombre de parties", main="Playtime")
+
+# Distribution de l'ordre des parties
+barplot(table(DTFormProcessInt$FirstCondition), xlab="Première partie", ylab="Nombre de personnes", main="Type de la première partie",las=2)
 ```
 
+###Réponses aux questionnaires
+
+####Q1: Profil des joueur
+
 ```{r echo=FALSE}
-# Comparaison du nombre de processus lancé avec les caractéristiques des parties
-setkey(DTForm,MyPlayerId)
-setkey(DTProcessInt,MyPlayerId)
-DTFormProcess <- DTForm[DTProcessInt[kind==0], nomatch=0]
+barplot(table(DTForm$age), xlab="Age", ylab="Nombre de personnes", main="Répartition de la population par âge",las=2)
+#barplot(table(DTForm$metier), xlab="Métier", ylab="Nombre de personnes", main="Répartition de la population par métier",las=2)
+barplot(table(DTForm$frequence), xlab="Fréquence", ylab="Nombre de personnes", main="Fréquence de jeu",las=2)
+#barplot(table(DTForm$plateformes), xlab="Plateformes", ylab="Nombre de personnes", main="Répartition de la population par plateforme",las=2)
+barplot(table(DTForm$minecraft), xlab="Expérience", ylab="Nombre de personnes", main="Expérience de Minecraft",las=2)
+barplot(table(DTForm$similaire), xlab="Expérience", ylab="Nombre de personnes", main="Expérience de jeux émergents",las=2)
+```
 
-DTFormProcessIntNbTmp <- DTFormProcess[,nrow(.SD),by=MyPlayerId]
+####Q2: Déroulement première et deuxième partie
 
-setkey(DTForm,MyPlayerId)
-setkey(DTFormProcessIntNbTmp,MyPlayerId)
-DTFormProcessInt <- DTForm[DTFormProcessIntNbTmp, nomatch=0]
-setnames(DTFormProcessInt, old=c("V1"), new=c("nb"))
-remove(DTFormProcessIntNbTmp);
+```{r echo=FALSE}
+hist(DTForm[FirstCondition=="vanilla"]$LongueurPremiere, xlab="Longueur des réponses", ylab="Nombre d'individus", main="Longueur des réponses pour vanilla si la première partie est en vanilla", breaks=30)
+summary(DTForm[FirstCondition=="vanilla"]$LongueurPremiere)
 
+hist(DTForm[FirstCondition=="mod"]$LongueurSeconde, xlab="Longueur des réponses", ylab="Nombre d'individus", main="Longueur des réponses pour vanilla si la première partie est en mod", breaks=30)
+summary(DTForm[FirstCondition=="mod"]$LongueurSeconde)
 
+hist(DTForm[FirstCondition=="mod"]$LongueurPremiere, xlab="Longueur des réponses", ylab="Nombre d'individus", main="Longueur des réponses pour mod si la première partie est en mod", breaks=30)
+summary(DTForm[FirstCondition=="mod"]$LongueurPremiere)
+
+hist(DTForm[FirstCondition=="vanilla"]$LongueurSeconde, xlab="Longueur des réponses", ylab="Nombre d'individus", main="Longueur des réponses pour mod si la première partie est en vanilla", breaks=30)
+summary(DTForm[FirstCondition=="vanilla"]$LongueurSeconde)
+
+```
+
+####Q3: Questionnaire comparatif
+
+```{r echo=FALSE}
 # Reponses au questionnaire comparatif sur les caractéristiques des deux parties
 DTFormSensVanillaFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
 DTFormSensVanillaFirst$v <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][sens==0])
@@ -352,55 +364,68 @@ DTFormManques <- rbind(DTFormManquesVanillaFirst, DTFormManquesModFirst)
 DTFormSurpris <- rbind(DTFormSurprisVanillaFirst, DTFormSurprisModFirst)
 DTFormPlaisir <- rbind(DTFormPlaisirVanillaFirst, DTFormPlaisirModFirst)
 
-# Distribution de l'ordre des parties
-barplot(table(DTFormProcessInt$FirstCondition), xlab="Première partie", ylab="Nombre de personnes", main="Ordre des parties",las=2)
-
 # Distribution des caracteristiques de jeu
-barplot(rowSums(data.table(rbind(DTFormSens$v, DTFormSens$pv, DTFormSens$n, DTFormSens$pm, DTFormSens$m))), main="A le plus de sens", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(rowSums(data.table(rbind(DTFormSituations$v, DTFormSituations$pv, DTFormSituations$n, DTFormSituations$pm, DTFormSituations$m))), main="La plus riche", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(rowSums(data.table(rbind(DTFormInteret$v, DTFormInteret$pv, DTFormInteret$n, DTFormInteret$pm, DTFormInteret$m))), main="A le plus d'interet", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(rowSums(data.table(rbind(DTFormLogique$v, DTFormLogique$pv, DTFormLogique$n, DTFormLogique$pm, DTFormLogique$m))), main="Est la plus chaotique", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(rowSums(data.table(rbind(DTFormFaire$v, DTFormFaire$pv, DTFormFaire$n, DTFormFaire$pm, DTFormFaire$m))), main="Difficile de savoir quoi faire", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(rowSums(data.table(rbind(DTFormObjectifs$v, DTFormObjectifs$pv, DTFormObjectifs$n, DTFormObjectifs$pm, DTFormObjectifs$m))), main="Difficile d'atteindre ses objectifs", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(rowSums(data.table(rbind(DTFormManques$v, DTFormManques$pv, DTFormManques$n, DTFormManques$pm, DTFormManques$m))), main="Manqué de choses à voir/faire", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(rowSums(data.table(rbind(DTFormSurpris$v, DTFormSurpris$pv, DTFormSurpris$n, DTFormSurpris$pm, DTFormSurpris$m))), main="Le plus surpris", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(rowSums(data.table(rbind(DTFormPlaisir$v, DTFormPlaisir$pv, DTFormPlaisir$n, DTFormPlaisir$pm, DTFormPlaisir$m))), main="La plus satisfaisante", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(DTFormSens$v, DTFormSens$pv, DTFormSens$n, DTFormSens$pm, DTFormSens$m))), main="Quelle partie vous a semblé avoir le plus de sens ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(DTFormSituations$v, DTFormSituations$pv, DTFormSituations$n, DTFormSituations$pm, DTFormSituations$m))), main="Quelle partie vous a semblé la plus riche, la plus varié ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(DTFormInteret$v, DTFormInteret$pv, DTFormInteret$n, DTFormInteret$pm, DTFormInteret$m))), main="Pour quelle partie avez-vous ressenti le plus d'intérêt ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(DTFormLogique$v, DTFormLogique$pv, DTFormLogique$n, DTFormLogique$pm, DTFormLogique$m))), main="Quelle partie vous a semblé la plus chaotique ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(DTFormFaire$v, DTFormFaire$pv, DTFormFaire$n, DTFormFaire$pm, DTFormFaire$m))), main="Dans quelle partie était-il le plus difficile de savoir quoi faire ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(DTFormObjectifs$v, DTFormObjectifs$pv, DTFormObjectifs$n, DTFormObjectifs$pm, DTFormObjectifs$m))), main="Dans quelle partie était-il le plus difficile d'atteindre les objectifs que vous vous étiez fixés ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(DTFormManques$v, DTFormManques$pv, DTFormManques$n, DTFormManques$pm, DTFormManques$m))), main="Dans quelle partie avez vous manqué de choses à voir ou à faire ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(DTFormSurpris$v, DTFormSurpris$pv, DTFormSurpris$n, DTFormSurpris$pm, DTFormSurpris$m))), main="Dans quelle partie avez vous été le plus surpris par les évènements ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(DTFormPlaisir$v, DTFormPlaisir$pv, DTFormPlaisir$n, DTFormPlaisir$pm, DTFormPlaisir$m))), main="Quelle partie vous a semblé la plus satisfaisante ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+```
 
-# Distribution des caracteristiques de jeu par ordre de partie
-barplot(data.table(rbind(DTFormSens$v, DTFormSens$pv, DTFormSens$n, DTFormSens$pm, DTFormSens$m))$V1, main="Sens pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(data.table(rbind(DTFormSens$v, DTFormSens$pv, DTFormSens$n, DTFormSens$pm, DTFormSens$m))$V2, main="Sens pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+##### Si la première partie est en vanilla
 
-barplot(data.table(rbind(DTFormSituations$v, DTFormSituations$pv, DTFormSituations$n, DTFormSituations$pm, DTFormSituations$m))$V1, main="Situations pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(data.table(rbind(DTFormSituations$v, DTFormSituations$pv, DTFormSituations$n, DTFormSituations$pm, DTFormSituations$m))$V2, main="Situations pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+```{r echo=FALSE}
+# Distribution des caracteristiques de jeu si commence par vanilla
+barplot(data.table(rbind(DTFormSens$v, DTFormSens$pv, DTFormSens$n, DTFormSens$pm, DTFormSens$m))$V1, main="Quelle partie vous a semblé avoir le plus de sens ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormSituations$v, DTFormSituations$pv, DTFormSituations$n, DTFormSituations$pm, DTFormSituations$m))$V1, main="Quelle partie vous a semblé la plus riche, la plus varié ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormInteret$v, DTFormInteret$pv, DTFormInteret$n, DTFormInteret$pm, DTFormInteret$m))$V1, main="Pour quelle partie avez-vous ressenti le plus d'intérêt ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormLogique$v, DTFormLogique$pv, DTFormLogique$n, DTFormLogique$pm, DTFormLogique$m))$V1, main="Quelle partie vous a semblé la plus chaotique ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormFaire$v, DTFormFaire$pv, DTFormFaire$n, DTFormFaire$pm, DTFormFaire$m))$V1, main="Dans quelle partie était-il le plus difficile de savoir quoi faire ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormObjectifs$v, DTFormObjectifs$pv, DTFormObjectifs$n, DTFormObjectifs$pm, DTFormObjectifs$m))$V1, main="Dans quelle partie était-il le plus difficile d'atteindre les objectifs que vous vous étiez fixés ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormManques$v, DTFormManques$pv, DTFormManques$n, DTFormManques$pm, DTFormManques$m))$V1, main="Dans quelle partie avez vous manqué de choses à voir ou à faire ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormSurpris$v, DTFormSurpris$pv, DTFormSurpris$n, DTFormSurpris$pm, DTFormSurpris$m))$V1, main="Dans quelle partie avez vous été le plus surpris par les évènements ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormPlaisir$v, DTFormPlaisir$pv, DTFormPlaisir$n, DTFormPlaisir$pm, DTFormPlaisir$m))$V1, main="Quelle partie vous a semblé la plus satisfaisante ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+```
 
-barplot(data.table(rbind(DTFormInteret$v, DTFormInteret$pv, DTFormInteret$n, DTFormInteret$pm, DTFormInteret$m))$V1, main="Interet pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(data.table(rbind(DTFormInteret$v, DTFormInteret$pv, DTFormInteret$n, DTFormInteret$pm, DTFormInteret$m))$V2, main="Interet pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+##### Si la première partie est en mod
 
-barplot(data.table(rbind(DTFormLogique$v, DTFormLogique$pv, DTFormLogique$n, DTFormLogique$pm, DTFormLogique$m))$V1, main="Logique pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(data.table(rbind(DTFormLogique$v, DTFormLogique$pv, DTFormLogique$n, DTFormLogique$pm, DTFormLogique$m))$V2, main="Logique pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+```{r echo=FALSE}
+# Distribution des caracteristiques de jeu si commence par mod
+barplot(data.table(rbind(DTFormSens$v, DTFormSens$pv, DTFormSens$n, DTFormSens$pm, DTFormSens$m))$V2, main="Quelle partie vous a semblé avoir le plus de sens ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormSituations$v, DTFormSituations$pv, DTFormSituations$n, DTFormSituations$pm, DTFormSituations$m))$V2, main="Quelle partie vous a semblé la plus riche, la plus varié ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormInteret$v, DTFormInteret$pv, DTFormInteret$n, DTFormInteret$pm, DTFormInteret$m))$V2, main="Pour quelle partie avez-vous ressenti le plus d'intérêt ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormLogique$v, DTFormLogique$pv, DTFormLogique$n, DTFormLogique$pm, DTFormLogique$m))$V2, main="Quelle partie vous a semblé la plus chaotique ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormFaire$v, DTFormFaire$pv, DTFormFaire$n, DTFormFaire$pm, DTFormFaire$m))$V2, main="Dans quelle partie était-il le plus difficile de savoir quoi faire ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormObjectifs$v, DTFormObjectifs$pv, DTFormObjectifs$n, DTFormObjectifs$pm, DTFormObjectifs$m))$V2, main="Dans quelle partie était-il le plus difficile d'atteindre les objectifs que vous vous étiez fixés ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormManques$v, DTFormManques$pv, DTFormManques$n, DTFormManques$pm, DTFormManques$m))$V2, main="Dans quelle partie avez vous manqué de choses à voir ou à faire ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormSurpris$v, DTFormSurpris$pv, DTFormSurpris$n, DTFormSurpris$pm, DTFormSurpris$m))$V2, main="Dans quelle partie avez vous été le plus surpris par les évènements ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormPlaisir$v, DTFormPlaisir$pv, DTFormPlaisir$n, DTFormPlaisir$pm, DTFormPlaisir$m))$V2, main="Quelle partie vous a semblé la plus satisfaisante ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
+```
 
-barplot(data.table(rbind(DTFormFaire$v, DTFormFaire$pv, DTFormFaire$n, DTFormFaire$pm, DTFormFaire$m))$V1, main="Faire pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(data.table(rbind(DTFormFaire$v, DTFormFaire$pv, DTFormFaire$n, DTFormFaire$pm, DTFormFaire$m))$V2, main="Faire pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+####Q4: Questionnaire sur la partie préférée
 
-barplot(data.table(rbind(DTFormObjectifs$v, DTFormObjectifs$pv, DTFormObjectifs$n, DTFormObjectifs$pm, DTFormObjectifs$m))$V1, main="Objectifs pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(data.table(rbind(DTFormObjectifs$v, DTFormObjectifs$pv, DTFormObjectifs$n, DTFormObjectifs$pm, DTFormObjectifs$m))$V2, main="Objectifs pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+```{r echo=FALSE}
 
-barplot(data.table(rbind(DTFormManques$v, DTFormManques$pv, DTFormManques$n, DTFormManques$pm, DTFormManques$m))$V1, main="Manques pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(data.table(rbind(DTFormManques$v, DTFormManques$pv, DTFormManques$n, DTFormManques$pm, DTFormManques$m))$V2, main="Manques pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+```
 
-barplot(data.table(rbind(DTFormSurpris$v, DTFormSurpris$pv, DTFormSurpris$n, DTFormSurpris$pm, DTFormSurpris$m))$V1, main="Surpris pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(data.table(rbind(DTFormSurpris$v, DTFormSurpris$pv, DTFormSurpris$n, DTFormSurpris$pm, DTFormSurpris$m))$V2, main="Surpris pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+####Q5: Questionnaire sur les processus
 
-barplot(data.table(rbind(DTFormPlaisir$v, DTFormPlaisir$pv, DTFormPlaisir$n, DTFormPlaisir$pm, DTFormPlaisir$m))$V1, main="Plaisir pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-barplot(data.table(rbind(DTFormPlaisir$v, DTFormPlaisir$pv, DTFormPlaisir$n, DTFormPlaisir$pm, DTFormPlaisir$m))$V2, main="Plaisir pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
-
+```{r echo=FALSE}
 # Distribution de l'interet pour les différents pouvoirs
-barplot(rowSums(data.table(rbind(nrow(DTForm[autres_p1==0]), nrow(DTForm[autres_p1==1]), nrow(DTForm[autres_p1==2]), nrow(DTForm[autres_p1==3])))), main="Interet pour le process 1", xlab="Non, je ne sais pas, peut-être, oui absolument", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(nrow(DTForm[autres_p1==0]), nrow(DTForm[autres_p1==1]), nrow(DTForm[autres_p1==2]), nrow(DTForm[autres_p1==3])))), main="Utiliseriez vous le pouvoir Compagnon dans d'autres contextes de jeu ou d'autres parties de Minecraft ?", xlab="Non, je ne sais pas, peut-être, oui absolument", ylab="Nombre de personnes")
 
-barplot(rowSums(data.table(rbind(nrow(DTForm[autres_p2==0]), nrow(DTForm[autres_p2==1]), nrow(DTForm[autres_p2==2]), nrow(DTForm[autres_p2==3])))), main="Interet pour le process 2", xlab="Non, je ne sais pas, peut-être, oui absolument", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(nrow(DTForm[autres_p2==0]), nrow(DTForm[autres_p2==1]), nrow(DTForm[autres_p2==2]), nrow(DTForm[autres_p2==3])))), main="Utiliseriez vous le pouvoir Roi des Lapins dans d'autres contextes de jeu ou d'autres parties de Minecraft ?", xlab="Non, je ne sais pas, peut-être, oui absolument", ylab="Nombre de personnes")
 
-barplot(rowSums(data.table(rbind(nrow(DTForm[autres_p3==0]), nrow(DTForm[autres_p3==1]), nrow(DTForm[autres_p3==2]), nrow(DTForm[autres_p3==3])))), main="Interet pour le process 3", xlab="Non, je ne sais pas, peut-être, oui absolument", ylab="Nombre de personnes")
+barplot(rowSums(data.table(rbind(nrow(DTForm[autres_p3==0]), nrow(DTForm[autres_p3==1]), nrow(DTForm[autres_p3==2]), nrow(DTForm[autres_p3==3])))), main="Utiliseriez vous le pouvoir Les autres dans d'autres contextes de jeu ou d'autres parties de Minecraft ?", xlab="Non, je ne sais pas, peut-être, oui absolument", ylab="Nombre de personnes")
+```
 
+####Q6: Questionnaire sur les lieux
+
+```{r echo=FALSE}
 # transformer dtform de façon a avoir pour le q characteristic 1 = v, 2 = pv, 3 = n, 4 = pm etc.
 
 #Transformer pour que pour tout le monde, ca soit 1  plutot vanilla, 5 plutot mod
@@ -458,15 +483,11 @@ montest(DTFormSituations)
 montest(DTFormSurpris)
 montest(DTFormPlaisir)
 
-
-barplot(table(DTForm$frequence), xlab="Fréquence", ylab="Nombre de personnes", main="Fréquence de jeu",las=2)
-barplot(table(DTForm$age), xlab="Age", ylab="Nombre de personnes", main="Répartition de la population par âge",las=2)
-barplot(table(DTForm$minecraft), xlab="Expérience", ylab="Nombre de personnes", main="Expérience de Minecraft",las=2)
-barplot(table(DTAInt$actionName), xlab="Actions", ylab="frequence", main="Actor interaction",las=2)
-barplot(table(DTAAInt$actionName), xlab="Actions", ylab="frequence", main="Actor Actor interaction",las=2)
+barplot(table(DTAInt$actionName), xlab="Actions", ylab="Frequence", main="Actor interaction",las=2)
+barplot(table(DTAAInt$actionName), xlab="Actions", ylab="Frequence", main="Actor Actor interaction",las=2)
 
 DTPlacesNbPlaces <- DTPlaces[,.(nbPlaces=nrow(.SD)),by=.(MyPlayerId)]
-barplot(table(DTPlacesNbPlaces$nbPlaces), xlab="Nb places", ylab="frequence", main="Number of places")
+barplot(table(DTPlacesNbPlaces$nbPlaces), xlab="Nb places", ylab="Frequence", main="Number of places")
 ```
 
 ###Cartes
